
[20/09/2021] - 5.0.36 - Simone Pelaia
Fix bug query mappata su campi nullable e fix query paginata

[06/10/2021] - 5.0.37 - Simone Pelaia
Query mappata imposta anche proprietà ereditate

[06/10/2021] - 5.0.38 - Simone Pelaia
Modificato logdebug senza format

[03/12/2021] - 5.0.39 - Simone Pelaia
Fix bug Accesso a campo di LogicalDelete dopo chiamata DeleteObject

[24/12/2021] - 5.0.40 - Simone Pelaia
Aggiunti metodi Exec e ExecTrans a livello di slot per eseguire blocchi di codice "Gestito" senza preoccuparsi di try/catch o altro
ToBizObjectList - Aggiunta possibilità di eseguire un'azione su ciscun oggetto creato

[28/01/2022] - 5.0.41 - Simone Pelaia
GetLazy fortemente tipizzato
Introdotto GetLazyEx per gestire eventuali chiamate su oggetto non ancora salvato
Introdotto ResetLazy per eliminare un dato cached e forzare il ricaricamento all'accesso successivo

[28/01/2022] - 5.0.42 - Simone Pelaia
DeleteAll su IEnumerable
Rinominati metodi Lazy
Aggiunto LazySet per setters

[24/02/2022] - 5.0.44 - Simone Pelaia
Aggiunti metodi base di Save e Delete sul BusinessObject con possibilità di overridare dei metodi protetti da eseguire prima o dopo entrambe le operazioni

[07/03/2022] - 5.0.45 - Simone Pelaia
Aggiunta possibilità di resettare dall'esterno tutte le proprietà Lazy di un businessobject

[08/03/2022] - 5.0.46 - Simone Pelaia
Aggiunta possibilità di copiare valori di un dataobject su un qualsiasi oggetto

[17/06/2022] - 5.0.47 - Simone Pelaia
Operator In con ienumerable
Possibilità di specificare un nome colonna con notazioni speciali DB (e. [Colname] per SQL Server o `Colname` per MySql )
LoopMT con gestione automatica dei thread
CreateList(page, offset)
CacheResult senza limitazioni

[17/10/2022] - 5.0.48 - Simone Pelaia
Rimosso event manager 
Fix sulle cache
Semplificata gestione interna proprietà mappate
Fix SimpleAES

[17/10/2022] - 5.0.50 - Simone Pelaia
Fix ExtraData

[16/12/2022] - 5.0.52 - Simone Pelaia
Centralizzazione cache statiche su slot